# telegram_downloader

./: .gitignore  README.md  TEMPLATE_GUIDE.md  analyze_debug.py  build.py  build_windows.bat  capture_template.py  create_test_images.py  fix_templates.py  main.py  pyproject.toml  requirements.txt  resize_templates.py  test_debug.py  test_detection_windows.py  test_direct_match.py  test_platform_diff.py  test_simple.py  test_window.py  test_windows.py  test_windows_detection.py
.claude/: CLAUDE.MD
images_original/: pyproject.toml
src/: automation.py  detector.py  region_selector.py  ui.py
src/core/: automation.py  detector.py  screen_capture.py
src/ui/: border_overlay.py  control_panel.py  control_panel_tk.py  main_window.py  overlay.py
tasks/: prd-auto-download-clicker.md  prd-telegram-auto-downloader.md
telegram_downloader/: README.md  requirements.txt
telegram_downloader/src/core/: __init__.py  automation.py  image_detector.py  screen_capture.py
