[project]
name = "telegram-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "pygame>=2.5.0",
    "pygame-gui>=0.6.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
]


