[project]
name = "telegram-downloader"
version = "0.1.0"
description = "Telegram auto downloader with image detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "customtkinter>=5.2.0",
    "pynput>=1.7.7",
    "python-xlib>=0.33; sys_platform == 'linux'",
    "pyobjc-framework-Quartz>=9.0; sys_platform == 'darwin'",
    "pywin32>=305; sys_platform == 'win32'",
]


